--- a/index.html
+++ b/index.html
@@ -1,349 +1,170 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>IFSC World Cups 2015–2021 | Visualisation</title>
 
-    <script src="https://cdn.jsdelivr.net/npm/vega@6.2.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@6.4.1"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-embed@7.0.2"></script>
+  <!-- Vega libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/vega@6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@7"></script>
 
-    <style media="screen">
-      body {
-        font-family: Arial, sans-serif;
-        margin: 40px;
-        background-color: #fafafa;
-      }
-      .vega-actions a {
-        margin-right: 5px;
-      }
-      h1, h2 {
-        text-align: center;
-      }
-      .chart {
-        margin: 50px auto;
-        width: 1000px;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Week 9 Homework Assignment</h1>
-
-    <!-- Visualization containers -->
-    <div id="vis1" class="chart"></div>
-    <div id="vis2" class="chart"></div>
-    <div id="vis3" class="chart"></div>
-    <div id="vis4" class="chart"></div>
-    <div id="vis5" class="chart"></div>
-    <div id="vis6" class="chart"></div>
-    <div id="vis7" class="chart"></div>
-    <div id="vis8" class="chart"></div>
-
-    <script>
-      // --- Visualization 1 (World Volcano Map) ---
-      var vlSpec1 = {
-        
-  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "width": 1000,
-  "height": 600,
-  "projection": {"type": "equalEarth"},
-  "layer": [
-    {
-      "data": {"graticule": true},
-      "mark": {"type": "geoshape", "stroke": "lightblue", "strokeWidth": 0.5}
-    },
-    {
-      "data": {
-        "url": "https://vega.github.io/vega-datasets/data/world-110m.json",
-        "format": {"type": "topojson", "feature": "countries"}
-      },
-      "transform": [
-        {
-          "lookup": "id",
-          "from": {
-            "data": {
-              "url": "https://raw.githubusercontent.com/JesseHodgson/FIT3179-Vis2/refs/heads/main/country-and-continent-codes-list-csv.csv",
-              "format": {"type": "csv"}
-            },
-            "key": "Country_Number",
-            "fields": ["Country_Name", "Continent_Name"]
-          }
-        }
-      ],
-      "mark": {"type": "geoshape", "stroke": "white"},
-      "encoding": {
-        "color": {
-          "field": "Continent_Name",
-          "type": "nominal",
-          "title": "Continent",
-          "scale": {
-            "domain": [
-              "Africa",
-              "Asia",
-              "Europe",
-              "North America",
-              "South America",
-              "Oceania"
-            ],
-            "range": [
-              "#FFD166",
-              "#EF476F",
-              "#118AB2",
-              "#06D6A0",
-              "#073B4C",
-              "#A65E44"
-            ]
-          }
-        },
-        "tooltip": [
-          {"field": "Country_Name", "type": "nominal", "title": "Country"},
-          {"field": "Continent_Name", "type": "nominal", "title": "Continent"}
-        ]
-      }
-    },
-    {
-      "title": {"text": "Locations of the World's Volcanoes", "fontSize": 20},
-      "data": {
-        "url": "https://raw.githubusercontent.com/JesseHodgson/FIT3179/refs/heads/main/volcanoes%20around%20the%20world%20in%202021.csv",
-        "format": {"type": "csv"}
-      },
-      "mark": {"type": "circle", "color": "red", "size": 15},
-      "encoding": {
-        "longitude": {"field": "Longitude", "type": "quantitative"},
-        "latitude": {"field": "Latitude", "type": "quantitative"},
-        "tooltip": [
-          {"field": "Volcano Name", "type": "nominal"},
-          {"field": "Country", "type": "nominal"}
-        ]
-      }
+  <style>
+    body {
+      font-family: "Segoe UI", Roboto, sans-serif;
+      margin: 0;
+      background: #fafafa url('https://i.imgur.com/sjSnq9O.png'); /* optional confetti bg */
+      background-size: 100px;
     }
-  ],
-  "config": {"style": {"cell": {"stroke": "transparent"}}}
-};
 
-      var vlSpec2 = 
-      { "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "width": 1000,
-  "height": 600,
-  "projection": {"type": "albersUsa"},
-  "title": {"text": "Volcanoes in the United States", "fontSize": 20},
-  "layer": [
-    {
-      "data": {
-        "url": "https://vega.github.io/vega-datasets/data/us-10m.json",
-        "format": {"type": "topojson", "feature": "states"}
-      },
-      "mark": {"type": "geoshape", "fill": "#0698d65d", "stroke": "black"}
-    },
-    {
-      "data": {
-        "url": "https://raw.githubusercontent.com/JesseHodgson/FIT3179-Vis2/refs/heads/main/volcanoes%20around%20the%20world%20in%202021.csv",
-        "format": {"type": "csv"}
-      },
-      "transform": [
-        {"filter": "datum.Country == 'United States'"}
-      ],
-      "mark": {"type": "circle", "size": 40, "opacity": 0.8, "stroke": "black", "strokeWidth": 0.5},
-      "encoding": {
-        "longitude": {"field": "Longitude", "type": "quantitative"},
-        "latitude": {"field": "Latitude", "type": "quantitative"},
-        "color": {
-          "field": "Type",
-          "type": "nominal",
-          "title": "Volcano Type",
-          "legend": {"orient": "right"}
-        },
-        "tooltip": [
-          {"field": "Volcano Name", "type": "nominal", "title": "Volcano"},
-          {"field": "Type", "type": "nominal", "title": "Type"},
-          {"field": "Country", "type": "nominal", "title": "Country"},
-          {"field": "Location", "type": "nominal", "title": "Location"}
-        ]
-      }
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      background: white;
+      padding: 40px 60px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
-  ],
-  "config": {"style": {"cell": {"stroke": "transparent"}}}
- };
-      var vlSpec3 = { 
-"$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "data": {
-    "url": "https://raw.githubusercontent.com/JesseHodgson/FIT3179-Vis2/refs/heads/main/volcanoes%20around%20the%20world%20in%202021.csv"
-  },
-  "mark": {"type": "arc", "innerRadius": 65}, 
-  "encoding": {
-    "theta": {"aggregate": "count", "field": "Type", "type": "quantitative", "title": "Number of Volcanoes"},
-    "color": {"field": "Type", "type": "nominal", "title": "Volcano Type"},
-    "order": {
-      "aggregate": "count",
-      "field": "Type",
-      "sort": "descending"
-    },
-    "tooltip": [
-      {"field": "Type", "type": "nominal", "title": "Volcano Type"},
-      {"aggregate": "count", "type": "quantitative", "title": "Number of Volcanoes"}
-    ]
-  },
-  "view": {"stroke": null},
-  "title": "Number of Volcanoes Belonging to Each Type"
-       };
-      var vlSpec4 = { 
-"$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "data": {
-    "url": "https://raw.githubusercontent.com/JesseHodgson/FIT3179-Vis2/refs/heads/main/volcanoes%20around%20the%20world%20in%202021.csv"
-  },
-  "mark": {"type": "arc", "innerRadius": 65}, 
-  "encoding": {
-    "theta": {"aggregate": "count", "field": "Status", "type": "quantitative", "title": "Number of Volcanoes"},
-    "color": {"field": "Status", "type": "nominal", "title": "Volcano Stauts"},
-    "order": {
-      "aggregate": "count",
-      "field": "Status",
-      "sort": "descending"
-    },
-    "tooltip": [
-      {"field": "Status", "type": "nominal", "title": "Volcano Status"},
-      {"aggregate": "count", "type": "quantitative", "title": "Number of Volcanoes"}
-    ]
-  },
-  "view": {"stroke": null},
-  "title": "Number of Volcanoes Belonging to Each Status"
-       };
-      var vlSpec5 = { 
-"$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "data": {"url": "https://raw.githubusercontent.com/JesseHodgson/FIT3179-Vis2/refs/heads/main/volcanoes%20around%20the%20world%20in%202021.csv"},
-  "mark": "rect",
-  "encoding": {
-    "x": {"field": "Type", "type": "nominal"},
-    "y": {"field": "Status", "type": "nominal"},
-    "color": {"aggregate": "count", "title": "Number of Volcanoes"},
-    "tooltip": [
-      {"field": "Type"},
-      {"field": "Status"},
-      {
-        "aggregate": "count",
-        "type": "quantitative",
-        "title": "Number of Volcanoes"
-      }
-    ]
-  },
-  "title": "Relationship Between the Type & Status of All Volcanoes"
-       };
-      var vlSpec6 = { 
-"$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "description": "Scatterplot of volcano density (land area vs number of volcanoes).",
-  "title": {"text": "Volcano density of each country.","fontSize": 20},
-  "data": {
-    "url": "https://raw.githubusercontent.com/JesseHodgson/FIT3179-Vis2/main/Country-volcano%20density.csv",
-    "format": {"type": "csv"}
-  },
-  "width": 700,
-  "height": 500,
-  "mark": {"type": "circle", "size": 80, "opacity": 0.8},
-  "encoding": {
-    "x": {
-      "field": "Land Area (km²)",
-      "type": "quantitative",
-      "title": "Land Area (km²)",
-      "scale": {"type": "log"}
-    },
-    "y": {
-      "field": "Count of volcanoes",
-      "type": "quantitative",
-      "title": "Number of Volcanoes",
-      "scale": {"nice": true}
-    },
-    "tooltip": [
-      {"field": "Country", "type": "nominal"},
-      {"field": "Land Area (km²)", "type": "quantitative"},
-      {"field": "Count of volcanoes", "type": "quantitative"}
-    ]
-  }
-       };
-      var vlSpec7 = { 
-"$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "title": {"text": "Explosivity of Each Type of Volcano's Eruption over Recorded History","fontSize": 20},
-  "data": {
-    "url": "https://raw.githubusercontent.com/JesseHodgson/FIT3179-Vis2/refs/heads/main/volcano-events.csv"
-  },
-  "width": 600,
-  "height": 400,
-  "mark": {
-    "type": "circle",
-    "opacity": 0.8,
-    "stroke": "black",
-    "strokeWidth": 1
-  },
-  "encoding": {
-    "x": {
-      "field": "Year",
-      "type": "quantitative",
-      "axis": {"grid": true}
-    },
-    "y": {"field": "Type", "type": "nominal", "axis": {"title": ""}},
-    "size": {
-      "field": "VEI",
-      "type": "quantitative",
-      "title": "Volcanic Explosivity Index",
-      "scale": {"type": "pow", "exponent": 6, "range": [10, 1500]}
-    },
-    "color": {"field": "Type", "type": "nominal", "legend": null},
-    "tooltip": [
-      {"field": "Name", "type": "nominal"},
-      {"field": "Country", "type": "nominal"},
-      {"field": "Year", "type": "nominal"},
-      {"field": "VEI", "type": "nominal"}
-    ]
-  }
-       };
-      var vlSpec8 = { 
-"$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "title": {"text": "Explosivity of Each Type of Volcano's Eruption in the last 100 years","fontSize": 20},
-  "data": {
-    "url": "https://raw.githubusercontent.com/JesseHodgson/FIT3179-Vis2/refs/heads/main/volcano-events.csv"
-  },
-  "transform": [
-    {"filter": "datum.Year >= 1924"}
-  ],
-  "width": 600,
-  "height": 400,
-  "mark": {
-    "type": "circle",
-    "opacity": 0.8,
-    "stroke": "black",
-    "strokeWidth": 1
-  },
-  "encoding": {
-    "x": {
-      "field": "Year",
-      "type": "quantitative",
-      "axis": {"grid": true},
-      "scale": {"domain": [1924, 2024]}
-    },
-    "y": {"field": "Type", "type": "nominal", "axis": {"title": ""}},
-    "size": {
-      "field": "VEI",
-      "type": "quantitative",
-      "title": "Volcanic Explosivity Index",
-      "scale": {"type": "pow", "exponent": 3, "range": [10, 1500]}
-    },
-    "color": {"field": "Type", "type": "nominal", "legend": null},
-    "tooltip": [
-      {"field": "Name", "type": "nominal"},
-      {"field": "Country", "type": "nominal"},
-      {"field": "Year", "type": "nominal"},
-      {"field": "VEI", "type": "nominal"}
-    ]
-  }
-       };
 
-      // --- Embed all visualizations ---
-      vegaEmbed('#vis1', vlSpec1);
-      vegaEmbed('#vis2', vlSpec2);
-      vegaEmbed('#vis3', vlSpec3);
-      vegaEmbed('#vis4', vlSpec4);
-      vegaEmbed('#vis5', vlSpec5);
-      vegaEmbed('#vis6', vlSpec6);
-      vegaEmbed('#vis7', vlSpec7);
-      vegaEmbed('#vis8', vlSpec8);
-    </script>
-  </body>
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    header h1 {
+      color: #0077b6;
+      margin-bottom: 0.2em;
+    }
+
+    header h2 {
+      font-weight: normal;
+      color: #555;
+    }
+
+    section {
+      margin: 3rem 0;
+    }
+
+    section h3 {
+      border-bottom: 2px solid #e0e0e0;
+      padding-bottom: 0.3em;
+      color: #333;
+    }
+
+    .chart-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      margin-top: 1.5rem;
+    }
+
+    .chart {
+      flex: 1 1 450px;
+      min-width: 350px;
+    }
+
+    p {
+      color: #444;
+      line-height: 1.6;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #777;
+      padding-top: 2rem;
+      border-top: 1px solid #eee;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <header>
+      <h1>IFSC World Cups 2015–2021</h1>
+      <h2>Competitive Sport Climbing</h2>
+      <p>
+        This visualisation presents data from the official IFSC website, showing locations of competitions, competitors, and athlete rankings from 2015–2021.
+      </p>
+    </header>
+
+    <!-- Section 1 -->
+    <section id="locations">
+      <h3>Locations</h3>
+      <div class="chart-row">
+        <div id="vis1" class="chart"></div>
+        <div class="chart-text">
+          <p>
+            The map below shows where World Cups were hosted across the globe. Larger circles represent multiple events in the same location.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section 2 -->
+    <section id="competitors">
+      <h3>Competitors</h3>
+      <div class="chart-row">
+        <div id="vis2" class="chart"></div>
+        <div id="vis3" class="chart"></div>
+      </div>
+      <p>
+        Gender and regional participation trends show the growth of competitive climbing since 2015.
+      </p>
+    </section>
+
+    <!-- Section 3 -->
+    <section id="rankings">
+      <h3>Rankings</h3>
+      <div class="chart-row">
+        <div id="vis4" class="chart"></div>
+        <div class="chart-text">
+          <p>
+            Rankings summarize athletes’ performances each year. Hover over bars to view scores and placements.
+          </p>
+        </div>
+      </div>
+
+      <div class="chart-row">
+        <div id="vis5" class="chart"></div>
+        <div id="vis6" class="chart"></div>
+      </div>
+    </section>
+
+    <section id="summary">
+      <h3>Summary & Trends</h3>
+      <div class="chart-row">
+        <div id="vis7" class="chart"></div>
+        <div id="vis8" class="chart"></div>
+      </div>
+    </section>
+
+    <footer>
+      <p>Want to learn more? Watch IFSC competitions on the <a href="#">IFSC YouTube Channel</a>.</p>
+    </footer>
+  </div>
+
+  <!-- Placeholder Vega-Lite JSON specs -->
+  <script>
+    const placeholder = {
+      "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
+      "description": "Placeholder chart",
+      "data": {"values": [{"a": "A", "b": 28}, {"a": "B", "b": 55}]},
+      "mark": "bar",
+      "encoding": {
+        "x": {"field": "a", "type": "nominal"},
+        "y": {"field": "b", "type": "quantitative"}
+      }
+    };
+
+    vegaEmbed('#vis1', placeholder);
+    vegaEmbed('#vis2', placeholder);
+    vegaEmbed('#vis3', placeholder);
+    vegaEmbed('#vis4', placeholder);
+    vegaEmbed('#vis5', placeholder);
+    vegaEmbed('#vis6', placeholder);
+    vegaEmbed('#vis7', placeholder);
+    vegaEmbed('#vis8', placeholder);
+  </script>
+</body>
 </html>
