--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   <script>
     // placeholder Vega-Lite spec
-    const main_map = {
+    var main_map = {
       "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
   "width": 1000,
   "height": 600,
@@ -250,4 +250,5 @@
     vegaEmbed('#vis8', placeholder);
   </script>
 </body>
+
 </html>
