--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
       <p>
         The why of this visualisation is to make this data understandable for the everyday person, and for people to learn about how interesting volcanoes are.
       </p>
+      <p>
+        The data sets used in this webpage: 
+        <p>
+          https://www.kaggle.com/datasets/ramjasmaurya/volcanoes-on-earth-in-2021
+        </p>
+        <p>
+          https://www.kaggle.com/datasets/rupindersinghrana/database-of-volcanic-eruptions
+        </p>
+      </p>
     </header>
 
 
